--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,5 @@ services:
       - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - nfsvolume-portainer:/data:rw
+      - .:/data:rw
     tty: true
-
-volumes:
-  nfsvolume-portainer:
-    driver: local
-    driver_opts:
-      type: "nfs"
-      o: "addr=192.168.0.96,rw,nfsvers=4"
-      device: ":/nfs-share/docker/portainer-data"
